[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/Menus.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/default.theme" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/liberation2/LiberationSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Misc/UI/Title1.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 10
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="LeftMenu" type="PanelContainer"]
anchor_bottom = 1.0
margin_right = 400.0
grow_vertical = 2
rect_min_size = Vector2( 400, 480 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 1430.0
rect_min_size = Vector2( 0, 480 )
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="VBoxContainer/TextureRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -13.0
custom_fonts/font = SubResource( 1 )
text = "version"
align = 2
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 166.0
margin_right = 280.0
margin_bottom = 170.0

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 280.0
margin_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 301.0
margin_right = 280.0
margin_bottom = 400.0
text = "Load"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 416.0
margin_right = 280.0
margin_bottom = 515.0
text = "Settings"

[node name="Overlay" type="Control" parent="."]
margin_left = 60.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 1430.0
mouse_filter = 2

[node name="Quit" type="Button" parent="Overlay"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -89.5
margin_right = 95.0
margin_bottom = -22.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
